--- a/index.html
+++ b/index.html
@@ -12,14 +12,48 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>Example</h1>
+      <h1>Tic-Tac-Toe</h1>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+      eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <form id="sign-up">
+        <fieldset>
+          <legend>Sign up!</legend>
+          <input type="text" name="credentials[email]" placeholder="email">
+          <input type="password" name="credentials[password]" placeholder="password">
+          <input type="password" name="credentials[password_confirmation]" placeholder="password_confirmation">
+          <input type="submit" name="submit" value="Sign up!">
+        </fieldset>
+      </form>
+
+    <h1>Sign In</h1>
+    <form id="sign-in">
+      <fieldset>
+        <legend>Sign In</legend>
+        <input type="text" name="credentials[email]" placeholder="email">
+        <input type="password" name="credentials[password]" placeholder="password">
+        <input type="submit" name="submit" value="Sign In">
+      </fieldset>
+    </form>
+
+    <h1>Change Password</h1>
+    <form id="change-password">
+      <fieldset>
+        <legend>Sign In</legend>
+        <input type="password" name="passwords[old]" placeholder="old password">
+        <input type="password" name="passwords[new]" placeholder="new password">
+        <input type="submit" name="submit" value="Change Password">
+      </fieldset>
+    </form>
+
+    <h1>Sign Out</h1>
+    <form id="sign-out">
+      <fieldset>
+        <legend>Sign Out</legend>
+        <input type="password" name="passwords[old]" placeholder="old password">
+        <input type="password" name="passwords[new]" placeholder="new password">
+        <input type="submit" name="submit" value="Change Password">
+      </fieldset>
+    </form>
     </body>
 </html>
