Changes for Curl Scripts and Style Connected the scripts/index.js to auth/events.js by creating authEvents constant, which requires the auth/events.js file. Added place holder style to the index.scss file, making the background pink and including div layout setup (without solid lines). Added 9 divs for the game-board to the index.html file. Main div class is"game-board", and each div contains data-id. The data-id of the first div starts at 0 (like an array) and the last div data-id is set to 8. Added curls scripts for scripts/change-password files.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tic-Tac-Toe</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags unless you know what you are doing -->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
+      <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
       <!-- Do not add `script` tags unless you know what you are doing -->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
@@ -55,5 +55,40 @@
         <input type="submit" name="submit" value="Change Password">
       </fieldset>
     </form>
+
+
+    <div class="game-board">
+    <div>
+      <div data-id="0">0</div>
+      <div data-id="1">1</div>
+      <div data-id="2">2</div>
+    </div>
+    <div>
+      <div data-id="3">3</div>
+      <div data-id="4">4</div>
+      <div data-id="5">5</div>
+    </div>
+    <div>
+      <div data-id="6">6</div>
+      <div data-id="7">7</div>
+      <div data-id="8">8</div>
+    </div>
+  </div>
+
+
+  <div class="blended_grid">
+    <div class="pageHeader">hey now
+    </div>
+    <div class="pageLeftMenu">hey now
+    </div>
+    <div class="pageContent"> this is what
+    </div>
+    <div class="pageRightMenu">DREAMS
+    </div>
+    <div class="pageFooter">are made of
+  </div>
+  </div>
+
+
     </body>
 </html>
