Updated HTML & Style Sheet Game-board now appears on page. Navigation bar appears at top of page, where before it appeared below user authentication.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 </head>
 
 <body class="container-fluid">
+  <nav>
+    <div class="small left"><p>IMAGE</p></div>
+    <div class="large left"><h1></h1></div>
+    <div class="small right"></div>
+    <div class="small right"></div>
+  </nav>
   <h1>Tic-Tac-Toe</h1>
 
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -57,7 +63,7 @@
     </fieldset>
   </form>
 
-
+<!--
   <div class="game-board">
     <div>
       <div data-id="0">0</div>
@@ -74,17 +80,9 @@
       <div data-id="7">7</div>
       <div data-id="8">8</div>
     </div>
-  </div>
+  </div> -->
 
-  <nav>
-    <div class="small left"><p>IMAGE</p></div>
-    <div class="large left"><h1>Tic-Tac-Toe</h1></div>
-    <div class="small right"></div>
-    <div class="small right"></div>
-  </nav>
-  <!--<h1>Tic-Tac-Toe</h1>-->
-
-  <div class="wrapper">
+  <div class="wrapper" style="width:800px; margin: auto auto;">
     <main>
       <!--Calculator-->
       <div id="game-board">
@@ -95,21 +93,21 @@
             </div>
         </div>
 
-        <div class="keys">
-          <!-- operators and other keys -->
-          <span></span>
-          <span></span>
-          <span></span>
+        <div class="gamePlay">
+          <span data-id="0"></span>
+          <span data-id="1"></span>
+          <span data-id="2"></span>
 
-          <span></span>
-          <span></span>
-          <span></span>
+          <span data-id="3"></span>
+          <span data-id="4"></span>
+          <span data-id="5"></span>
 
-          <span></span>
-          <span></span>
-          <span></span>
-
+          <span data-id="6"></span>
+          <span data-id="7"></span>
+          <span data-id="8"></span>
         </div>
+      </div>
+
       </div>
 
       <!--Game Boards End-->
