--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <div class="gamePlay">
+        <div class="gameSquare">
           <span data-id="0"></span>
           <span data-id="1"></span>
           <span data-id="2"></span>
