Add Reset Button To Gameboard Add physical reset button and css attributes to gameboard ui. No added functionality

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
           <span data-id="7"></span>
           <span data-id="8"></span>
         </div>
+        <p><input type="button" onclick="reset()" value="RESET"></p>
       </div>
 
       </div>
