Change to id & classes in html for gameboard and added logic to to game.js for whoseTurn to have the player game token switch to 'O' after player 1 (which is 'X') takes their turn. Changed class for game board to game-board, which only includes the square <span>'s on the game board, and changed id of area containing gameboard and message box to id="game-area"

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
   <div class="wrapper" style="width:800px; margin: auto auto;">
     <main>
-      <!--Calculator-->
-      <div id="game-board">
+      <!--Game Board-->
+      <div id="game-area">
         <!-- Screen and clear key -->
         <div class="top">
           <div class="screen">
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <div class="gameSquare">
+        <div class="game-board">
           <span data-id="0"></span>
           <span data-id="1"></span>
           <span data-id="2"></span>
@@ -117,8 +117,8 @@
     <!--  Instructions:-->
     <!--</aside>-->
   </div>
-  <p class="copyright"> @Kelly English-James</p>
-  <footer> </footer>
+
+  <footer> <p class="copyright"> Developed By Kelly English-James @ GA Boston</p></footer>
 
 
 </body>
