Add class .Square to each span element Add class .Square to each span element for board squares

--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
         </div>
 
         <div class="game-board">
-          <span data-id="0"></span>
-          <span data-id="1"></span>
-          <span data-id="2"></span>
+          <span class="square" data-id="0"></span>
+          <span class="square" data-id="1"></span>
+          <span class="square" data-id="2"></span>
 
-          <span data-id="3"></span>
-          <span data-id="4"></span>
-          <span data-id="5"></span>
+          <span class="square" data-id="3"></span>
+          <span class="square" data-id="4"></span>
+          <span class="square" data-id="5"></span>
 
-          <span data-id="6"></span>
-          <span data-id="7"></span>
-          <span data-id="8"></span>
+          <span class="square" data-id="6"></span>
+          <span class="square" data-id="7"></span>
+          <span class="square" data-id="8"></span>
         </div>
         <p><input type="button" onclick="reset()" value="RESET"></p>
       </div>
