Remove " " text space from .square span So now, each .square is blank until clicked.

--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
         </div>
 
         <div class="game-board">
-          <span class="square" id="0">" "</span>
-          <span class="square" id="1">" "</span>
-          <span class="square" id="2">" "</span>
+          <span class="square" id="0"></span>
+          <span class="square" id="1"></span>
+          <span class="square" id="2"></span>
 
-          <span class="square" id="3">" "</span>
-          <span class="square" id="4">" "</span>
-          <span class="square" id="5">" "</span>
+          <span class="square" id="3"></span>
+          <span class="square" id="4"></span>
+          <span class="square" id="5"></span>
 
-          <span class="square" id="6">" "</span>
-          <span class="square" id="7">" "</span>
-          <span class="square" id="8">" "</span>
+          <span class="square" id="6"></span>
+          <span class="square" id="7"></span>
+          <span class="square" id="8"></span>
         </div>
         <p><input type="button" onclick="reset()" value="RESET"></p>
       </div>
